--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
 	<link rel="stylesheet" href="css/misc.css">
 	<link rel="stylesheet" href="css/gallery.css">
 	<div id="gallery-header" class="simple-hero">
-		<h1>gallery</h1>
+		<h1>luau gallery</h1>
 	</div>
 	<div id="gallery-container" class="fifth-content">
 		<div class="content-border"></div>
